--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
   "author": "Marcello Donisi - Claudio Lista - Ciro Marrazzo",
   "license": "",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^2.0.20"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^3.1.1",
-    "ejs": "^2.6.1",
+    "csurf": "^1.11.0",
+    "ejs": "^3.1.8",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
+    "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
+    "pug": "^3.0.2",
     "sequelize": "^5.0.0-beta.11"
   }
 }
